[gd_scene load_steps=56 format=2]

[ext_resource path="res://Sprites/RresetButton.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/SlideGrab.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/SlideBar.png" type="Texture" id=3]
[ext_resource path="res://Level/SpaceDetect.gd" type="Script" id=4]
[ext_resource path="res://Sprites/UI/SpacebarUI.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/SliderIconUI.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UI/ResetPop.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 7 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 7 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 7 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 7 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 7 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 7 )
region = Rect2( 576, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 7 )
region = Rect2( 640, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 7 )
region = Rect2( 704, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 7 )
region = Rect2( 768, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 7 )
region = Rect2( 832, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 7 )
region = Rect2( 1088, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 7 )
region = Rect2( 896, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 7 )
region = Rect2( 1024, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 7 )
region = Rect2( 1152, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 7 )
region = Rect2( 960, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 1 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 1 )
region = Rect2( 256, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 1 )
region = Rect2( 320, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 1 )
region = Rect2( 384, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 1 )
region = Rect2( 448, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 1 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 1 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 1 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 1 )
region = Rect2( 256, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 1 )
region = Rect2( 320, 128, 64, 64 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ) ],
"loop": true,
"name": "Popup",
"speed": 15.0
}, {
"frames": [ SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="StyleBoxFlat" id=53]
bg_color = Color( 1, 0.560784, 0.0627451, 1 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 6 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=81]
animations = [ {
"frames": [ SubResource( 79 ), SubResource( 80 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 32 )

[sub_resource type="SpriteFrames" id=59]
animations = [ {
"frames": [ SubResource( 57 ), SubResource( 58 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[node name="Control" type="Control"]
anchor_right = 1.0
margin_bottom = 1024.0
script = ExtResource( 4 )

[node name="Reset" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 251.0
margin_top = 466.0
margin_right = 329.0
margin_bottom = 547.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 289, 498 )
scale = Vector2( 2, 2 )
z_index = 3
frames = SubResource( 2 )
frame = 6
playing = true

[node name="VSlider" type="VSlider" parent="."]
margin_left = 189.0
margin_top = 381.0
margin_right = 205.0
margin_bottom = 633.0
custom_icons/grabber_highlight = ExtResource( 2 )
custom_icons/grabber = ExtResource( 2 )
custom_styles/slider = SubResource( 53 )
max_value = 0.1
step = 0.01
value = 0.1

[node name="Sprite" type="Sprite" parent="VSlider"]
position = Vector2( 7.5, 126 )
scale = Vector2( 2, 2 )
z_index = -1
texture = ExtResource( 3 )

[node name="SoundIcon" type="AnimatedSprite" parent="VSlider"]
position = Vector2( 9, -20 )
scale = Vector2( 2, 2 )
frames = SubResource( 81 )

[node name="Spacebar" type="AnimatedSprite" parent="."]
position = Vector2( 288, 593 )
scale = Vector2( 2, 2 )
frames = SubResource( 59 )
playing = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="value_changed" from="VSlider" to="." method="_on_slid"]
